Refresh token done, and other stuff related to it